--- a/environment.env
+++ b/environment.env
@@ -8,8 +8,8 @@ LD_LIBRARY_PATH:lib/native
 #BHT_API_KEY=a0228010278a325bf0b16509fefbef30
 
 #S3_BUCKET=durbananswersphotos
-#S3_KEY=AKIAJGX6CJXOV5RBV5PQ
-#S3_SECRET=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
+#S3_KEY='s3 key here'
+#S3_SECRET='s3 secret key here'
 
 #KISSMETRICS_API_KEY=kissmetrics key here
 
