--- a/environment.env
+++ b/environment.env
@@ -5,7 +5,7 @@ LD_LIBRARY_PATH:lib/native
 #SEARCHIFY_API_URL=searchify api url goes here
 #SEARCHIFY_API_INDEX=api index goes here
 
-#BHT_API_KEY=a0228010278a325bf0b16509fefbef30
+#BHT_API_KEY='BHT api here'
 
 #S3_BUCKET=durbananswersphotos
 #S3_KEY='s3 key here'
